--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "express": "^4.18.2",
     "next": "13.3.0",
+    "nodemailer": "^6.9.1",
+    "nodemon": "^2.0.22",
     "postcss": "8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
